--- a/Palette_Training_5-main/Assignment_5_v7.ipynb
+++ b/Palette_Training_5-main/Assignment_5_v7.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "[25017 rows x 18 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,16 +406,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-19 15:29:17.090 ERROR   fiona._env: `/vsimem/b0638bee8eed4c4eb3560596485b2fda' not recognized as a supported file format.\n"
+     ]
+    },
+    {
+     "ename": "DriverError",
+     "evalue": "'/vsimem/b0638bee8eed4c4eb3560596485b2fda' not recognized as a supported file format.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCPLE_OpenFailedError\u001b[0m                      Traceback (most recent call last)",
+      "File \u001b[1;32mfiona\\ogrext.pyx:136\u001b[0m, in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mfiona\\_err.pyx:291\u001b[0m, in \u001b[0;36mfiona._err.exc_wrap_pointer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_OpenFailedError\u001b[0m: '/vsimem/b0638bee8eed4c4eb3560596485b2fda' not recognized as a supported file format.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mDriverError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m load_geo()\n",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m, in \u001b[0;36mload_geo\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_geo\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mreturn\u001b[39;00m gpd\u001b[39m.\u001b[39;49mread_file(GEO_PATH)\n",
+      "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\playground\\lib\\site-packages\\geopandas\\io\\file.py:259\u001b[0m, in \u001b[0;36m_read_file\u001b[1;34m(filename, bbox, mask, rows, engine, **kwargs)\u001b[0m\n\u001b[0;32m    256\u001b[0m     path_or_bytes \u001b[39m=\u001b[39m filename\n\u001b[0;32m    258\u001b[0m \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mfiona\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 259\u001b[0m     \u001b[39mreturn\u001b[39;00m _read_file_fiona(\n\u001b[0;32m    260\u001b[0m         path_or_bytes, from_bytes, bbox\u001b[39m=\u001b[39mbbox, mask\u001b[39m=\u001b[39mmask, rows\u001b[39m=\u001b[39mrows, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    261\u001b[0m     )\n\u001b[0;32m    262\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpyogrio\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    263\u001b[0m     \u001b[39mreturn\u001b[39;00m _read_file_pyogrio(\n\u001b[0;32m    264\u001b[0m         path_or_bytes, bbox\u001b[39m=\u001b[39mbbox, mask\u001b[39m=\u001b[39mmask, rows\u001b[39m=\u001b[39mrows, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    265\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\playground\\lib\\site-packages\\geopandas\\io\\file.py:303\u001b[0m, in \u001b[0;36m_read_file_fiona\u001b[1;34m(path_or_bytes, from_bytes, bbox, mask, rows, where, **kwargs)\u001b[0m\n\u001b[0;32m    300\u001b[0m     reader \u001b[39m=\u001b[39m fiona\u001b[39m.\u001b[39mopen\n\u001b[0;32m    302\u001b[0m \u001b[39mwith\u001b[39;00m fiona_env():\n\u001b[1;32m--> 303\u001b[0m     \u001b[39mwith\u001b[39;00m reader(path_or_bytes, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs) \u001b[39mas\u001b[39;00m features:\n\u001b[0;32m    304\u001b[0m         crs \u001b[39m=\u001b[39m features\u001b[39m.\u001b[39mcrs_wkt\n\u001b[0;32m    305\u001b[0m         \u001b[39m# attempt to get EPSG code\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\playground\\lib\\site-packages\\fiona\\collection.py:770\u001b[0m, in \u001b[0;36mBytesCollection.__init__\u001b[1;34m(self, bytesbuf, **kwds)\u001b[0m\n\u001b[0;32m    767\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvirtual_file \u001b[39m=\u001b[39m buffer_to_virtual_file(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbytesbuf, ext\u001b[39m=\u001b[39mext)\n\u001b[0;32m    769\u001b[0m \u001b[39m# Instantiate the parent class.\u001b[39;00m\n\u001b[1;32m--> 770\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvirtual_file, vsi\u001b[39m=\u001b[39mfiletype, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m    772\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_closed \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\playground\\lib\\site-packages\\fiona\\collection.py:234\u001b[0m, in \u001b[0;36mCollection.__init__\u001b[1;34m(self, path, mode, driver, schema, crs, encoding, layer, vsi, archive, enabled_drivers, crs_wkt, ignore_fields, ignore_geometry, include_fields, wkt_version, allow_unsupported_drivers, **kwargs)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    233\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession \u001b[39m=\u001b[39m Session()\n\u001b[1;32m--> 234\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession\u001b[39m.\u001b[39mstart(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    235\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    236\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession \u001b[39m=\u001b[39m WritingSession()\n",
+      "File \u001b[1;32mfiona\\ogrext.pyx:587\u001b[0m, in \u001b[0;36mfiona.ogrext.Session.start\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mfiona\\ogrext.pyx:143\u001b[0m, in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mDriverError\u001b[0m: '/vsimem/b0638bee8eed4c4eb3560596485b2fda' not recognized as a supported file format."
+     ]
+    }
+   ],
    "source": [
     "load_geo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -454,12 +485,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in geo data\n",
     "geo_df = gpd.read_file('Rural_Municipality/Rural_Municipality.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PPID</th>\n",
+       "      <th>EFFDT</th>\n",
+       "      <th>EXPDT</th>\n",
+       "      <th>FEATURECD</th>\n",
+       "      <th>RMNO</th>\n",
+       "      <th>RMNM</th>\n",
+       "      <th>SHAPE_AREA</th>\n",
+       "      <th>SHAPE_LEN</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0101000095</td>\n",
+       "      <td>2019-01-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>095</td>\n",
+       "      <td>GOLDEN WEST</td>\n",
+       "      <td>8.101431e+08</td>\n",
+       "      <td>2.658514e+05</td>\n",
+       "      <td>POLYGON ((654081.000 5546088.320, 654885.320 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0101000378</td>\n",
+       "      <td>2019-07-29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>378</td>\n",
+       "      <td>ROSEMOUNT</td>\n",
+       "      <td>5.844701e+08</td>\n",
+       "      <td>1.612719e+05</td>\n",
+       "      <td>POLYGON ((265258.740 5810148.180, 266062.740 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0101000288</td>\n",
+       "      <td>2015-01-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>288</td>\n",
+       "      <td>PLEASANT VALLEY</td>\n",
+       "      <td>8.532007e+08</td>\n",
+       "      <td>1.168951e+05</td>\n",
+       "      <td>POLYGON ((254141.490 5701256.420, 254179.510 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0101000106</td>\n",
+       "      <td>2019-04-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>106</td>\n",
+       "      <td>WHISKA CREEK</td>\n",
+       "      <td>8.526283e+08</td>\n",
+       "      <td>1.292883e+05</td>\n",
+       "      <td>POLYGON ((339874.810 5539057.770, 339849.430 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0101000132</td>\n",
+       "      <td>2019-07-16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>132</td>\n",
+       "      <td>HILLSBOROUGH</td>\n",
+       "      <td>6.343913e+08</td>\n",
+       "      <td>1.030527e+05</td>\n",
+       "      <td>POLYGON ((445175.620 5573313.600, 445572.880 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>0101000588</td>\n",
+       "      <td>2022-12-19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>588</td>\n",
+       "      <td>MEADOW LAKE</td>\n",
+       "      <td>5.922870e+09</td>\n",
+       "      <td>1.011120e+06</td>\n",
+       "      <td>MULTIPOLYGON (((307104.520 6003527.820, 307139...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>0101000352</td>\n",
+       "      <td>2022-12-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>352</td>\n",
+       "      <td>HEART'S HILL</td>\n",
+       "      <td>8.812504e+08</td>\n",
+       "      <td>1.210734e+05</td>\n",
+       "      <td>POLYGON ((187054.680 5758478.840, 187005.860 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>0101000351</td>\n",
+       "      <td>2022-12-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>351</td>\n",
+       "      <td>PROGRESS</td>\n",
+       "      <td>8.441731e+08</td>\n",
+       "      <td>1.419927e+05</td>\n",
+       "      <td>POLYGON ((209380.850 5785495.100, 209851.950 5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>0101000520</td>\n",
+       "      <td>2022-12-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>520</td>\n",
+       "      <td>PADDOCKWOOD</td>\n",
+       "      <td>2.408683e+09</td>\n",
+       "      <td>6.212794e+05</td>\n",
+       "      <td>MULTIPOLYGON (((451283.150 5981138.420, 451285...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>0101000491</td>\n",
+       "      <td>2022-12-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RMPPID</td>\n",
+       "      <td>491</td>\n",
+       "      <td>BUCKLAND</td>\n",
+       "      <td>8.095962e+08</td>\n",
+       "      <td>2.260746e+05</td>\n",
+       "      <td>POLYGON ((439451.190 5922989.290, 439441.900 5...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>298 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PPID       EFFDT  EXPDT FEATURECD RMNO             RMNM  \\\n",
+       "0    0101000095  2019-01-21    NaN    RMPPID  095      GOLDEN WEST   \n",
+       "1    0101000378  2019-07-29    NaN    RMPPID  378        ROSEMOUNT   \n",
+       "2    0101000288  2015-01-27    NaN    RMPPID  288  PLEASANT VALLEY   \n",
+       "3    0101000106  2019-04-24    NaN    RMPPID  106     WHISKA CREEK   \n",
+       "4    0101000132  2019-07-16    NaN    RMPPID  132     HILLSBOROUGH   \n",
+       "..          ...         ...    ...       ...  ...              ...   \n",
+       "293  0101000588  2022-12-19    NaN    RMPPID  588      MEADOW LAKE   \n",
+       "294  0101000352  2022-12-21    NaN    RMPPID  352     HEART'S HILL   \n",
+       "295  0101000351  2022-12-21    NaN    RMPPID  351         PROGRESS   \n",
+       "296  0101000520  2022-12-21    NaN    RMPPID  520      PADDOCKWOOD   \n",
+       "297  0101000491  2022-12-21    NaN    RMPPID  491         BUCKLAND   \n",
+       "\n",
+       "       SHAPE_AREA     SHAPE_LEN  \\\n",
+       "0    8.101431e+08  2.658514e+05   \n",
+       "1    5.844701e+08  1.612719e+05   \n",
+       "2    8.532007e+08  1.168951e+05   \n",
+       "3    8.526283e+08  1.292883e+05   \n",
+       "4    6.343913e+08  1.030527e+05   \n",
+       "..            ...           ...   \n",
+       "293  5.922870e+09  1.011120e+06   \n",
+       "294  8.812504e+08  1.210734e+05   \n",
+       "295  8.441731e+08  1.419927e+05   \n",
+       "296  2.408683e+09  6.212794e+05   \n",
+       "297  8.095962e+08  2.260746e+05   \n",
+       "\n",
+       "                                              geometry  \n",
+       "0    POLYGON ((654081.000 5546088.320, 654885.320 5...  \n",
+       "1    POLYGON ((265258.740 5810148.180, 266062.740 5...  \n",
+       "2    POLYGON ((254141.490 5701256.420, 254179.510 5...  \n",
+       "3    POLYGON ((339874.810 5539057.770, 339849.430 5...  \n",
+       "4    POLYGON ((445175.620 5573313.600, 445572.880 5...  \n",
+       "..                                                 ...  \n",
+       "293  MULTIPOLYGON (((307104.520 6003527.820, 307139...  \n",
+       "294  POLYGON ((187054.680 5758478.840, 187005.860 5...  \n",
+       "295  POLYGON ((209380.850 5785495.100, 209851.950 5...  \n",
+       "296  MULTIPOLYGON (((451283.150 5981138.420, 451285...  \n",
+       "297  POLYGON ((439451.190 5922989.290, 439441.900 5...  \n",
+       "\n",
+       "[298 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geo_df"
    ]
   }
  ],
